--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
-        "laravel/framework": "~5.8.0|^6.0|^7.0",
+        "laravel/framework": "~5.8.0|^6.0|^7.0|^8.0",
         "moontoast/math": "^1.1",
         "symfony/var-dumper": "^4.1|^5.0"
     },
